<resources>
    <string name="app_name">Registration</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="signup">SignUp</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="customer_registration">Customer Registration</string>
    <string name="customer_name">Customer Name</string>
</resources>
